# LineScan-Camera-Pipeline

./: CMakeLists.txt  CynLr_Design_Overview.docx  README.md
data/: sample.csv
include/: BoundedQueue.h  CsvDataSource.h  DataGenerationBlock.h  FilterThresholdBlock.h  IDataSource.h  LabellingBlock.h  Pipeline.h  PixelPair.h  RngDataSource.h  TracingBlock.h  WebcamDataSource.h
src/: DataGenerationBlock.cpp  FilterThresholdBlock.cpp  LabellingBlock.cpp  Pipeline.cpp  TracingBlock.cpp  main.cpp
tests/: tests.cpp
